<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_CylinderX_Command" Id="{da610787-8da4-0918-242c-6ff79d9b522a}">
    <Declaration><![CDATA[TYPE ST_CylinderX_Command :
    STRUCT
        RetractExtend  : BOOL;
        RetractCylinder : BOOL;
    END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>