<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_CylinderX_Config" Id="{982f8ba7-035b-0308-0ff1-2ac43301b0e7}">
    <Declaration><![CDATA[TYPE ST_CylinderX_Config :
    STRUCT
        ExtendTime  : LREAL;
        RetractTime : LREAL;
    END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>